Feature: Add fcm and revert to env #118